# mfc-test

./: CMakeLists.txt  MyDialog.cpp  MyDialog.h  dlg2.cpp  dlg2.h  mfc_test0.cpp  mfc_test0.h  mfc_test0Dlg.cpp  mfc_test0Dlg.h  mfctest0.aps  mfctest0.rc  resource.h
res/: mfctest0.rc2
